hillel - ./gradlew not working for some reason